$Id: NEWS,v 1.743 2006-04-17 18:39:45 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 2766 - Support for automatic stack trace if SIGSEGV is received.
- Bug 2714 - mod_auth_file munges AuthUserFile, AuthGroupFile records.
- Bug 2721 - mod_auth_unix does not behave properly when first in AuthOrder.
- Bug 2535 - Compare directives using integer comparisons when possible to
  improve performance.
- Bug 2753 - CCC not closing SSL/TLS connection correctly.
- Bug 2654 - FEAT command should be subject to <Limit>.
- Bug 2740 - TYPE command not allowed before USER/PASS, causes problem for
  `ftp -n'.
- Bug 2777 - ProFTPD does handle data sockets properly on FreeBSD 6.
- Bug 2664 - Add 'delay info' ftpdctl action for showing DelayTable values.
  This patch also added a 'delay reset' ftpdctl action, for clearing the
  DelayTable.
- Bug 2769 - mod_auth_pam needs a patch to allow pam_group to work.
- Bug 2599 - Support for using OpenSSL "engines".

1.3.0 - Released 16-Apr-2006
--------------------------------
- Bug 2733 - libtool requires sh/bash.
- Bug 2770 - FreeBSD compiler warning that "__GLIBC__" is not defined.
- Bug 2771 - FreeBSD compiler warning about undeclared fgetpwent/fgetgrent
  functions.
- Bug 2772 - FreeBSD compiler warning that "_FILE_OFFSET_BITS" is not defined.

1.3.0rc5 - Released 18-Mar-2006
--------------------------------
- Bug 2757 - Add support for quota modules to RPM spec.
- Bug 2759 - Adding --with-includes to configure can cause problems when
  building with other packages.  Fixed so that CPPFLAGS and LDFLAGS are
  restored to their original settings after running the configure