@@ -1,4 +1,4 @@
-<!-- $Id: index.html,v 1.16 2006-01-11 13:55:36 castaglia Exp $ -->
+<!-- $Id: index.html,v 1.17 2006-04-17 18:52:35 castaglia Exp $ -->
 <!-- $Source: /home/proftpd-core/backup/proftp-cvsroot/proftpd/doc/howto/index.html,v $ -->
 
 <html>
@@ -184,6 +184,11 @@ Recommended order of reading:
   </dd>
 
   <p>
+  <dt>On the <a href="CreateHome.html"><code>CreateHome</code></a> directive
+  <dd>Covers how to configure the daemon to create home directories on-demand
+  </dd>
+
+  <p>
   <dt>On <a href="Controls.html">Controls</a>
   <dd>Covers Controls and <code>mod_ctrls</code>
   </dd>
@@ -228,7 +233,7 @@ all of the directives to see everything that ProFTPD is capable of supporting.
 
 <p>
 <hr>
-Last Updated: <i>$Date: 2006-01-11 13:55:36 $</i><br>
+Last Updated: <i>$Date: 2006-04-17 18:52:35 $</i><br>
 <hr>
 
 </body>
