@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.743 2006-04-17 18:39:45 castaglia Exp $
+$Id: NEWS,v 1.744 2006-04-17 18:52:33 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -26,6 +26,7 @@ CVS
   DelayTable.
 - Bug 2769 - mod_auth_pam needs a patch to allow pam_group to work.
 - Bug 2599 - Support for using OpenSSL "engines".
+- Bug 2611 - CreateHome should allow non-root-owned parent directories.
 
 1.3.0 - Released 16-Apr-2006
 --------------------------------
